Removed Universal selector for margin in the task box and added padding in the task box p to fix the irregular spacing.

--- a/lesson-11/demo-code/src/css/tetris.css
+++ b/lesson-11/demo-code/src/css/tetris.css
@@ -43,9 +43,9 @@ main {
     background-color: #e6e6e6
 }
 
-.task-box * {
+/* .task-box * {
     margin: 1rem;
-}
+} */
 
 .task-box h2 {
     flex-basis: 25%;
@@ -54,6 +54,7 @@ main {
 
 .task-box p {
     flex-basis: 75%;
+    padding: 1rem;
 }
 
 .task-box:last-child {
